# app/Http/Controllers/API/ArticleAPIController.php
@@ -1,0 +1,281 @@
+<?php
+
+namespace App\Http\Controllers\API;
+
+use App\Http\Requests\API\CreateArticleAPIRequest;
+use App\Http\Requests\API\UpdateArticleAPIRequest;
+use App\Models\Article;
+use App\Repositories\ArticleRepository;
+use Illuminate\Http\Request;
+use App\Http\Controllers\AppBaseController;
+use Response;
+
+/**
+ * Class ArticleController
+ * @package App\Http\Controllers\API
+ */
+
+class ArticleAPIController extends AppBaseController
+{
+    /** @var  ArticleRepository */
+    private $articleRepository;
+
+    public function __construct(ArticleRepository $articleRepo)
+    {
+        $this->articleRepository = $articleRepo;
+    }
+
+    /**
+     * @param Request $request
+     * @return Response
+     *
+     * @SWG\Get(
+     *      path="/articles",
+     *      summary="Get a listing of the Articles.",
+     *      tags={"Article"},
+     *      description="Get all Articles",
+     *      produces={"application/json"},
+     *      @SWG\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @SWG\Schema(
+     *              type="object",
+     *              @SWG\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @SWG\Property(
+     *                  property="data",
+     *                  type="array",
+     *                  @SWG\Items(ref="#/definitions/Article")
+     *              ),
+     *              @SWG\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function index(Request $request)
+    {
+        $articles = $this->articleRepository->all(
+            $request->except(['skip', 'limit']),
+            $request->get('skip'),
+            $request->get('limit')
+        );
+
+        return $this->sendResponse($articles->toArray(), 'Articles retrieved successfully');
+    }
+
+    /**
+     * @param CreateArticleAPIRequest $request
+     * @return Response
+     *
+     * @SWG\Post(
+     *      path="/articles",
+     *      summary="Store a newly created Article in storage",
+     *      tags={"Article"},
+     *      description="Store Article",
+     *      produces={"application/json"},
+     *      @SWG\Parameter(
+     *          name="body",
+     *          in="body",
+     *          description="Article that should be stored",
+     *          required=false,
+     *          @SWG\Schema(ref="#/definitions/Article")
+     *      ),
+     *      @SWG\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @SWG\Schema(
+     *              type="object",
+     *              @SWG\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @SWG\Property(
+     *                  property="data",
+     *                  ref="#/definitions/Article"
+     *              ),
+     *              @SWG\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function store(CreateArticleAPIRequest $request)
+    {
+        $input = $request->all();
+
+        $article = $this->articleRepository->create($input);
+
+        return $this->sendResponse($article->toArray(), 'Article saved successfully');
+    }
+
+    /**
+     * @param int $id
+     * @return Response
+     *
+     * @SWG\Get(
+     *      path="/articles/{id}",
+     *      summary="Display the specified Article",
+     *      tags={"Article"},
+     *      description="Get Article",
+     *      produces={"application/json"},
+     *      @SWG\Parameter(
+     *          name="id",
+     *          description="id of Article",
+     *          type="integer",
+     *          required=true,
+     *          in="path"
+     *      ),
+     *      @SWG\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @SWG\Schema(
+     *              type="object",
+     *              @SWG\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @SWG\Property(
+     *                  property="data",
+     *                  ref="#/definitions/Article"
+     *              ),
+     *              @SWG\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function show($id)
+    {
+        /** @var Article $article */
+        $article = $this->articleRepository->find($id);
+
+        if (empty($article)) {
+            return $this->sendError('Article not found');
+        }
+
+        return $this->sendResponse($article->toArray(), 'Article retrieved successfully');
+    }
+
+    /**
+     * @param int $id
+     * @param UpdateArticleAPIRequest $request
+     * @return Response
+     *
+     * @SWG\Put(
+     *      path="/articles/{id}",
+     *      summary="Update the specified Article in storage",
+     *      tags={"Article"},
+     *      description="Update Article",
+     *      produces={"application/json"},
+     *      @SWG\Parameter(
+     *          name="id",
+     *          description="id of Article",
+     *          type="integer",
+     *          required=true,
+     *          in="path"
+     *      ),
+     *      @SWG\Parameter(
+     *          name="body",
+     *          in="body",
+     *          description="Article that should be updated",
+     *          required=false,
+     *          @SWG\Schema(ref="#/definitions/Article")
+     *      ),
+     *      @SWG\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @SWG\Schema(
+     *              type="object",
+     *              @SWG\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @SWG\Property(
+     *                  property="data",
+     *                  ref="#/definitions/Article"
+     *              ),
+     *              @SWG\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function update($id, UpdateArticleAPIRequest $request)
+    {
+        $input = $request->all();
+
+        /** @var Article $article */
+        $article = $this->articleRepository->find($id);
+
+        if (empty($article)) {
+            return $this->sendError('Article not found');
+        }
+
+        $article = $this->articleRepository->update($input, $id);
+
+        return $this->sendResponse($article->toArray(), 'Article updated successfully');
+    }
+
+    /**
+     * @param int $id
+     * @return Response
+     *
+     * @SWG\Delete(
+     *      path="/articles/{id}",
+     *      summary="Remove the specified Article from storage",
+     *      tags={"Article"},
+     *      description="Delete Article",
+     *      produces={"application/json"},
+     *      @SWG\Parameter(
+     *          name="id",
+     *          description="id of Article",
+     *          type="integer",
+     *          required=true,
+     *          in="path"
+     *      ),
+     *      @SWG\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @SWG\Schema(
+     *              type="object",
+     *              @SWG\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @SWG\Property(
+     *                  property="data",
+     *                  type="string"
+     *              ),
+     *              @SWG\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function destroy($id)
+    {
+        /** @var Article $article */
+        $article = $this->articleRepository->find($id);
+
+        if (empty($article)) {
+            return $this->sendError('Article not found');
+        }
+
+        $article->delete();
+
+        return $this->sendSuccess('Article deleted successfully');
+    }
+}
