# app/Models/Article.php
@@ -1,0 +1,117 @@
+<?php
+
+namespace App\Models;
+
+use Eloquent as Model;
+
+
+
+/**
+ * @SWG\Definition(
+ *      definition="Article",
+ *      required={"title", "content", "status_id"},
+ *      @SWG\Property(
+ *          property="id",
+ *          description="id",
+ *          type="integer",
+ *          format="int32"
+ *      ),
+ *      @SWG\Property(
+ *          property="created_at",
+ *          description="created_at",
+ *          type="string",
+ *          format="date-time"
+ *      ),
+ *      @SWG\Property(
+ *          property="updated_at",
+ *          description="updated_at",
+ *          type="string",
+ *          format="date-time"
+ *      ),
+ *      @SWG\Property(
+ *          property="title",
+ *          description="title",
+ *          type="string"
+ *      ),
+ *      @SWG\Property(
+ *          property="content",
+ *          description="content",
+ *          type="string"
+ *      ),
+ *      @SWG\Property(
+ *          property="image",
+ *          description="image",
+ *          type="string"
+ *      ),
+ *      @SWG\Property(
+ *          property="status_id",
+ *          description="status_id",
+ *          type="integer",
+ *          format="int32"
+ *      )
+ * )
+ */
+class Article extends Model
+{
+
+
+    public $table = 'articles';
+    
+
+
+
+    public $fillable = [
+        'title',
+        'content',
+        'image',
+        'status_id'
+    ];
+
+    /**
+     * The attributes that should be casted to native types.
+     *
+     * @var array
+     */
+    protected $casts = [
+        'id' => 'integer',
+        'title' => 'string',
+        'image' => 'string',
+        'status_id' => 'integer'
+    ];
+
+    /**
+     * Validation rules
+     *
+     * @var array
+     */
+    public static $rules = [
+        'title' => 'required',
+        'content' => 'required',
+        'image' => 'nullable',
+        'status_id' => 'required'
+    ];
+
+    /**
+     * @return \Illuminate\Database\Eloquent\Relations\BelongsToMany
+     **/
+    public function categories()
+    {
+        return $this->belongsToMany(\App\Models\Category::class, '');
+    }
+
+    /**
+     * @return \Illuminate\Database\Eloquent\Relations\BelongsToMany
+     **/
+    public function tags()
+    {
+        return $this->belongsToMany(\App\Models\Tag::class, '');
+    }
+
+    /**
+     * @return \Illuminate\Database\Eloquent\Relations\BelongsTo
+     **/
+    public function status()
+    {
+        return $this->belongsTo(\App\Models\Status::class);
+    }
+}
